# Dynamik

./: .gitignore  Cargo.toml  LICENSE  README.md  main  output
examples/: hello_world  hello_world.dy  math  math.dy  module.dy  triangle.dy  while_loop.dy
src/: analyzer.rs  cli.rs  lib.rs  main.rs  parser.rs  typechecker.rs
src/llvm/: code_gen.rs  code_gen_old.rs  compiler.rs  helper.rs  helper_old.rs  mod.rs  modules.rs  modules_old.rs  types.rs
