[package]
name = "dynamik"
version = "0.1.0"
edition = "2021"
authors = ["Pranjal Patel <pranjalpatel@duck.com>", "Hamza <hamzaoubrahim51@gmail.com>"]
description = "A fast, powerful, expressive and typesafe language."
repository = "https://github.com/dynamik-lang/Dynamik"
license = "GPL-3.0-only"
readme = "README.md"
categories = ["programming-language"]

[dependencies]
ariadne = "0.3.0"
chumsky = { git = "https://github.com/zesterer/chumsky"}
logos = "0.13.0"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm15-0"] }
llvm-sys-150 = { package = "llvm-sys", version = "150.1.0", features = ["prefer-static"] }
miette = {version = "5.10.0", features = ["fancy"]}
clap = "4.3.19"

[[bin]]
path = "src/main.rs"
name = "dyc"